Mobile audio english needed fixing after changing width on mobile audio so implmented rtl for previous commit(2)

--- a/app/styles/_questionPreview.scss
+++ b/app/styles/_questionPreview.scss
@@ -532,7 +532,12 @@ audio.audio-width-mobile {
         width: 75%;
     }
     audio.audio-width-mobile {
-       /* width: 200px;*/
+        width: 200px;
+    }
+    .rtl {
+        audio.audio-width-mobile {
+            width: 200px;
+        }
     }
 
     #questionPreview {
